Jan 10, 2023
  updated build.gradle to be gradle 6.x + compatible