@@ -22,15 +22,15 @@ repositories {
 }
 
 dependencies {
-    implementation 'commons-dbcp:commons-dbcp:1.4'
+    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
     implementation 'commons-io:commons-io:2.5'
-    implementation 'commons-net:commons-net:3.5'
-    implementation 'commons-pool:commons-pool:1.5.4'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.4'
-    implementation 'log4j:log4j:1.2.17'
-    implementation 'com.oracle.database.jdbc:ojdbc8:19.8.0.0'
-    implementation 'org.springframework:spring-beans:5.2.3.RELEASE'
-    implementation 'org.springframework:spring-jdbc:5.2.3.RELEASE'
+    implementation 'commons-net:commons-net:3.9.0'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.5'
+    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+    implementation 'com.oracle.database.jdbc:ojdbc8:21.1.0.0'
+    implementation 'org.springframework:spring-beans:5.3.0'
+    implementation 'org.springframework:spring-jdbc:5.3.0'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
