@@ -1,65 +1,0 @@
-# Direct log messages to stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%d] - %m%n
-
-
-# Root logger option
-log4j.rootLogger=error, logfile
-log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-log4j.appender.logfile.Append=true
-log4j.appender.logfile.File=logs/root.log
-log4j.appender.logfile.MaxFileSize=8000KB
-log4j.appender.logfile.MaxBackupIndex=5
-log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
-log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
-
-log4j.logger.summary=info, summary, stdout
-log4j.appender.summary=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.summary.Append=true
-log4j.appender.summary.DatePattern='.'yyyy-MM-dd
-log4j.appender.summary.File=logs/summary.log
-log4j.appender.summary.layout=org.apache.log4j.PatternLayout
-log4j.appender.summary.layout.ConversionPattern=[%d] - %m%n
-
-log4j.logger.downloaded=info, downloaded
-log4j.appender.downloaded=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.downloaded.Append=true
-log4j.appender.downloaded.DatePattern='.'yyyy-MM-dd
-log4j.appender.downloaded.File=logs/downloaded.log
-log4j.appender.downloaded.layout=org.apache.log4j.PatternLayout
-log4j.appender.downloaded.layout.ConversionPattern=[%d] - %m%n
-
-log4j.logger.empty=info, empty
-log4j.appender.empty=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.empty.Append=true
-log4j.appender.empty.DatePattern='.'yyyy-MM-dd
-log4j.appender.empty.File=logs/empty.log
-log4j.appender.empty.layout=org.apache.log4j.PatternLayout
-log4j.appender.empty.layout.ConversionPattern=[%d] - %m%n
-
-log4j.logger.duplicate=info, duplicate
-log4j.appender.duplicate=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.duplicate.Append=true
-log4j.appender.duplicate.DatePattern='.'yyyy-MM-dd
-log4j.appender.duplicate.File=logs/duplicate.log
-log4j.appender.duplicate.layout=org.apache.log4j.PatternLayout
-log4j.appender.duplicate.layout.ConversionPattern=[%d] - %m%n
-
-log4j.logger.column_size=info, column_size
-log4j.appender.column_size=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.column_size.Append=true
-log4j.appender.column_size.DatePattern='.'yyyy-MM-dd
-log4j.appender.column_size.File=logs/column_size.log
-log4j.appender.column_size.layout=org.apache.log4j.PatternLayout
-log4j.appender.column_size.layout.ConversionPattern=[%d] - %m%n
-
-######## redirect all spring framework activity into a separate log
-log4j.logger.edu.mcw.rgd.process=debug, log_rgd, stdout
-log4j.additivity.edu.mcw.rgd.process=false
-log4j.appender.log_rgd=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.log_rgd.DatePattern='.'yyyy-MM
-log4j.appender.log_rgd.Append=true
-log4j.appender.log_rgd.File=logs/rgd.log
-log4j.appender.log_rgd.layout=org.apache.log4j.PatternLayout
-log4j.appender.log_rgd.layout.ConversionPattern=[%d] - %m%n
